# kids-experience-radar

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
config/: claude-desktop-mcp.example.json  codex-mcp.example.toml  com.kidsradar.daily.plist.example  com.kidsradar.suwon-gyeonggi.daily.plist.example  html_sources.example.json  mcp-stdio-server.example.json  tips.example.csv
docs/: ARCHITECTURE.md  CONNECTOR_REGISTRY.csv  CONNECTOR_REGISTRY.json  LEGAL_AND_OPERATIONS.md  MCP.md  SOURCE_CATALOG.csv  SOURCE_CATALOG.json  SOURCE_CATALOG.md  VERIFICATION.md
scripts/: build_source_catalog.py  export_connector_registry.py
tests/: test_bd_select_reservation.py  test_culture_portal.py  test_digest.py  test_education_office.py  test_eshare_source.py  test_geocoding.py  test_ggc_events.py  test_ggcf_affiliates.py  test_goyang_children_museum.py  test_gyeongbuk_education.py  test_gyeonggi_discovery_catalog.py  test_gyeonggi_jang.py  test_gyeonggi_library.py  test_hmoka.py  test_http.py  test_hyundai_motorstudio.py  test_jeonnam_art.py  test_kimchikan.py  test_knps_trail_programs.py  test_koagi.py  test_kopis.py  test_kywa_camps.py  test_leeum_hoam.py  test_mcp_server.py  test_modu_museum.py  test_municipal_web_reserve.py  test_national_apis.py  test_normalizers.py  test_policy_and_html.py  test_samsung_innovation.py  test_select_web_list.py  test_seoul.py  test_server.py  test_source_catalog.py  test_standard_data.py  test_store.py  test_suwon_culture_foundation.py  test_suwon_ecology.py  test_suwon_education.py  (+3 more)
(+141 files in other folders)
